stretched breadcrumbs across top of map to fix it blocking zoom

--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ nav h1 a {
     background-color: #eee;
     font-size: 17px;
     margin: 0;
-    width: calc(50% - 80px);
+    /*width: calc(50% - 80px);*/
 }
 /* Display list items side by side */
 #breadcrumb li {
